
2003-11-16	Joel Becker <joel.becker@oracle.com>

	* configure.in: Clean up force32 echo.
	* include/linux/asmcompat32.h: sys_ioctl() prototype.
	* kernel/oracleasm.c: sys_ioctl() prototype.
	* vendor/common/oracleasm.sysconfig: Default sysconfig.
	* vendor/common/oracleasm.init.functions: Configure functions.
	* vendor/redhat/oracleasm.init: Working vendorized script.

2003-11-13	Joel Becker <joel.becker@oracle.com>

	* vendor/common/oracleasm.init.functions.

2003-11-13	Joel Becker <joel.becker@oracle.com>

	* configure.in: vendor subdir.
	* vendor/common/Makefile: Added.
	* vendor/unitedlinux/Makefile: Added.
	* vendor/unitedlinux/oracleasm.init: Added.

2003-11-13	Joel Becker <joel.becker@oracle.com>

	* Makefile: Add vendor subdir.
	* vendor: Add vendor subdir.
	* redhat: Moved to vendor/redhat.
	* unitedlinux: Moved to vendor/unitedlinux.
	* vendor/common: Added.
	* vendor/redhat/Makefile: Adjust TOPDIR.

2003-11-13	Joel Becker <joel.becker@oracle.com>

	* configure.in: Added M64, USERM64, and --enable-force32.
	* Config.make.in: Added M64, USERM64.
	* kernel/Makefile: Added M64.
	* {tools,test,libosm}: Added USERM64.
	* kernel/oracleasm.c: sys_ioctl() prototype.
	* test/sizes.c: Added ppc.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* kernel/oracleasm.c: Fix SuSE builds.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* configure.in: ppc64 -m64 stuff.
	* include/linux/asmcompat32.h: Lots of CONFIG_COMPAT hacks.
	* kernel/Makefile: Fix CFLAGS.
	* kernel/oracleasm.c: Lots of CONFIG_COMPAT hacks.
	* libosm/Makefile: Fix CPPFLAGS.
	* test/Makefile: Fix CPPFLAGS.
	* test/asmtest.c: No osm_dump.
	* test/sizes.c: Fix BUILD_PLATFORM.
	* tools/Makefile: Fix CPPFLAGS.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* configure.in: 0.9.0 for the ASM half-change.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* Makefile: Change RPM specfile names.
	* configure.in: Change specfile names.
	* redhat/Makefile: Reference new specfile names.