@@ -2,6 +2,6 @@ TOPDIR = ../..
 
 include $(TOPDIR)/Preamble.make
 
-DIST_FILES = oracleasm.init.functions
+DIST_FILES = oracleasm.init.functions oracleasm.sysconfig
 
 include $(TOPDIR)/Postamble.make
