@@ -15,6 +15,11 @@
 %define buildhugemem	1
 %define builddebug	0
 
+%ifarch ia64
+%define buildsmp	0
+%define buildhugemem	0
+%endif
+
 
 # This must be changed to the minimum ABI compat kernel version expected
 %define base 2.4.21
@@ -190,7 +195,11 @@ make
 %install
 
 mkdir -p $RPM_BUILD_ROOT/etc/init.d
-cp -f redhat/oracleasm.init $RPM_BUILD_ROOT/etc/init.d/oracleasm
+cp -f vendor/redhat/oracleasm.init $RPM_BUILD_ROOT/etc/init.d/oracleasm
+mkdir -p $RPM_BUILD_ROOT/etc/sysconfig
+cp -f vendor/common/oracleasm.sysconfig $RPM_BUILD_ROOT/etc/sysconfig/oracleasm
+mkdir -p $RPM_BUILD_ROOT/usr/lib/oracleasm
+cp -f vendor/common/oracleasm.init.functions $RPM_BUILD_ROOT/usr/lib/oracleasm/oracleasm.init.functions
 
 if [ "%{_lib}" = "lib64" ]
 then
@@ -261,6 +270,8 @@ chkconfig oracleasm on
 %defattr(-,root,root)
 /usr/sbin/asmtool
 /etc/init.d/oracleasm
+/etc/sysconfig/oracleasm
+/usr/lib/oracleasm/oracleasm.init.functions
 
 
 
