@@ -1,6 +1,16 @@
 
 2003-11-16	Joel Becker <joel.becker@oracle.com>
 
+	* vendor/common/Makefile: Add oracleasm.sysconfig.
+	* vendor/redhat/oracleasm-2.4.21-EL.spec.in: Add all the new
+		init junk.  Fix ia64 build choices.
+	* vendor/redhat/oracleasm-2.4.9-e.spec.in: Add the new init
+		junk.
+	* vendor/redhat/oracleasm.init: A path that will soon become
+		configure bits.
+
+2003-11-16	Joel Becker <joel.becker@oracle.com>
+
 	* configure.in: Clean up force32 echo.
 	* include/linux/asmcompat32.h: sys_ioctl() prototype.
 	* kernel/oracleasm.c: sys_ioctl() prototype.
